# weld-cli

./: .gitignore  .pre-commit-config.yaml  =0.24  =3.22  CHANGELOG.md  CLAUDE.md  ENTERPRISE_PLAN.md  LICENSE  Makefile  PLAN.md  README.md  ROADMAP.md  SPECS.md  mkdocs.yml  pyproject.toml
.claude/docs/: 1.3-review-findings.md  ENTERPRISE_PLAN.md  IMPLEMENTATION_PLAN.md  IMPLEMENT_COMMAND_PLAN.md  LOCK_REVIEW_FINDINGS.md  PLAN.md  SPEC.md  SPECS.md
.claude/research/: release-workflow-requirements.md  specs-gap-analysis.md  test-quality-evaluation.md  weld-implement-command.md
.github/workflows/: release.yml
docs/: configuration.md  installation.md  telegram-research.md  telegram-research_PLAN.md  telegram-spec.md  telegram-spec_spec.md  telegram.md  troubleshooting.md
docs/commands/: doctor.md  implement.md  init.md
docs/specs/: prompt-features-research.md  prompt-features-research_PLAN.md  prompt-features-spec.md
specs/: autocomplete-research_PLAN.md  autocomplete-support.md
src/weld/: __init__.py  checks.py  claude.py  cli.py  codex.py  commit.py  completions.py  config.py  constants.py  diff.py  git.py  logging.py  loop.py  output.py  plan.py  review.py  run.py  step.py  transcripts.py
src/weld.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/weld/commands/: __init__.py  commit.py  discover.py  doc_review.py  doctor.py  implement.py  init.py  interview.py  next.py  plan.py  prompt.py  research.py  run.py  status.py  step.py
src/weld/core/: __init__.py  artifact_versioning.py  commit_handler.py  discover_engine.py  doc_review_engine.py  (+10 more)
tests/: conftest.py  e2e_test.sh  test_artifact_versioning.py  test_checks.py  test_claude.py  test_cli.py  test_codex.py  test_commit.py  test_completions.py  test_config.py  test_diff.py  test_discover.py  test_doc_review.py  test_git.py  test_implement.py  test_integration.py  test_interview.py  test_lock_manager.py  test_models.py  test_output.py  test_plan.py  test_research.py  test_review_engine.py  test_run.py  test_session_tracker.py  test_step_processor.py  test_streaming.py  test_timing.py
tests/telegram/: test_bot.py  test_cli.py  test_config.py  test_files.py  test_format.py  test_integration.py  test_queue.py  test_runner.py  test_state.py
(+26 files in other folders)
